--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shrink-ray-current",
+  "name": "alcumus-shrink-ray",
   "description": "Node.js compression middleware with brotli and zopfli support",
-  "version": "4.1.2",
+  "version": "1.0.1",
   "contributors": [
     "Arturas Molcanovas <a.molcanovas@gmail.com> (https://github.com/Alorel)",
     "CodeIter (https://github.com/CodeIter)",
@@ -14,10 +14,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Alorel/shrink-ray.git"
+    "url": "git+https://github.com/Alcumus/shrink-ray.git"
   },
   "bugs": {
-    "url": "https://github.com/Alorel/shrink-ray/issues"
+    "url": "https://github.com/Alcumus/shrink-ray/issues"
   },
   "keywords": [
     "compression",
@@ -54,7 +54,8 @@
     "node-zopfli-es": "^1.0.3",
     "nyc": "^15.0.0",
     "proxyquire": "^2.1.0",
-    "supertest": "^4.0.0"
+    "supertest": "^4.0.0",
+    "versiony-cli": "^1.3.0"
   },
   "peerDependencies": {
     "iltorb": "^2.0.0",
@@ -66,6 +67,7 @@
   "scripts": {
     "reinstall": "rm -rf node_modules package-lock.json && npm install",
     "test": "nyc mocha --check-leaks --bail",
-    "doctoc": "doctoc --github README.md"
+    "doctoc": "doctoc --github README.md",
+    "push": "versiony ./package.json --patch && npm publish && git add . && git commit -am build && git push"
   }
 }
